--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>バニラSPA</title>
-    <meta name="viewport" content="width=device-width, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width">
     <link rel="icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="/css/destyle.css">
     <link rel="stylesheet" href="/css/application.css">
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="/img/touch-icon.png">
     <script defer src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script defer type="module" src="/src/application.js"></script>
+<!--    <script defer type="module" src="/bundle/application.bundle.js"></script>-->
 </head>
 <body></body>
 </html>
